# akshare-rs

./: Cargo.toml  README.md
src/: core.rs  lib.rs  stock.rs  utils.rs
src/stock/: stock_hist_em.rs  stock_summary.rs
