[package]
name = "test_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
maplit = "1.0.2"
polars = { version = "0.31.1", features = ["temporal", "strings", "dtype-date", "lazy"] }
reqwest = "0.11.18"
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "full"] }
transpose = "0.2.2"
