[package]
name = "akshare-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.72"
cached = "0.44.0"
maplit = "1.0.2"
polars = { version = "0.31.1", features = ["temporal", "strings", "dtype-date", "lazy"] }
rayon = "1.7.0"
reqwest = "0.11.18"
serde_json = { version = "1.0.103", features = ["preserve_order"] }
smartstring = "1.0.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "full"] }
