[package]
name = "akshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
anyhow = "1.0"
cached = "0.44"
maplit = "1.0"
polars = { version = "0.31", features = ["temporal", "strings", "dtype-date", "lazy"] }
rayon = "1.7"
reqwest = "0.11"
serde_json = { version = "1.0", features = ["preserve_order"] }
smartstring = "1.0"
tokio = { version = "1.29" }
